public/css/grille-tarifs.css
/* TARIFS------------------------------------------------------------------------ */
.section-tarifs{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.tarifs-specialite{
    margin: auto;
    padding-left: unset;
    width: 80%;
    min-width: 80%;max-width: 80%;
    table-layout: fixed;
    border-collapse: collapse;
    border:1px solid var(--clr-bleu-f);
    margin-bottom: 3rem;
}

.tarifs-specialite thead{
    background-color: var(--clr-bleu-c);
    color: var(--clr-bleu-xc);
}

.tarifs-specialite td{
    padding: 0.5rem 1rem ;
    overflow-wrap: anywhere;
    word-break: break-word;
    vertical-align: top;
}

.tarifs-specialite td:last-child{
    width: 6.5rem;
    white-space: nowrap;
    text-align: right;
}

.tarifs-specialite tbody tr:nth-child(odd){
    background-color: var(--clr-bleu-xc);
}

@media (max-width:1024px){
    .tarifs-specialite{
        width: 100%;
        min-width: 100%;
        max-width: 100%;
    }
}

